Fix spacing of table footers
When implementing the horizontally scrollable tables I messed up the
spacing above the text that says “Only showing the first 50 rows”, where
it’s displayed below a table that doesn’t have horizontal scrolling.

This commit makes the spacing correct when this element is used both
with and without a horizontally scrolling table above it.

--- a/app/assets/stylesheets/components/fullscreen-table.scss
+++ b/app/assets/stylesheets/components/fullscreen-table.scss
@@ -7,7 +7,7 @@
     overflow-y: hidden;
     box-sizing: border-box;
     position: absolute;
-    margin: 5px 0 $gutter 0;
+    margin: 5px 0 ($gutter * 2) 0;
     padding: 0 0 0 0;
     overflow: hidden;
     border-bottom: 1px solid $border-colour;
